# Conlang_Generator

./: .gitignore  README.md  conlang.bat  pyproject.toml
lang.egg-info/: PKG-INFO  SOURCES.txt
projects/41e0af60/TEST/: config.yaml
src/conlang/: app.py  ipa.yaml  master copy.yaml  master.yaml  paths.py
src/conlang.egg-info/: PKG-INFO  SOURCES.txt
src/conlang/docs/: guide_zh.md
src/conlang/lexicon/: generator.py
src/conlang/routes/: views.py
src/conlang/static/css/: components.css  ipa_management.css  morphology.css  syntax.css
src/conlang/static/csv/: translations.csv
src/conlang/static/js/: i18n.js  ipa_management.js
src/conlang/templates/: dictionary.html  ipa.html  ipa_management.html  layout.html  lexicon.html  macros.html  morph_agglutinative.html  morphology.html  portal.html  projects.html  syntax.html
src/conlang/templates/partials/: _dict_add_row.html  _dict_row.html  _ipa_tab_section.html  _ipa_table_zone.html  _syntax_section.html
src/conlang/utils/: prompt.txt  utils.py
src/projects/Elvish/: config.yaml  lexicon.yaml
src/projects/Gibberish/: config.yaml  lexicon.yaml
src/projects/Russian/: config.yaml
